[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-toolbox-experimental"
version = "0.0.0"
description = "Experimental Sphinx Extensions."
readme = "README.rst"
keywords = [ "documentation", "sphinx", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-toolbox-experimental"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-toolbox-experimental/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-toolbox-experimental"

[tool.mkrecipe]
conda-channels = [ "sphinx-toolbox",]
extras = "all"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "BSD-3-Clause"
package = "sphinx_toolbox_experimental"
additional-files = [ "recursive-include sphinx_toolbox_experimental/download_icon *",]

[tool.importcheck]
always = [
    "sphinx_toolbox_experimental.html_section",
    "sphinx_toolbox_experimental.autosummary_widths",
    "sphinx_toolbox_experimental.succinct_seealso",
    "sphinx_toolbox_experimental.peps",
]

[tool.dep_checker]
allowed_unused = [ "sphinx_packaging",]
